--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -2,22 +2,122 @@
 <html>
 <head>
     <title>EMV QR Generator</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
     <style>
-        body { font-family: Arial; padding: 20px; }
-        input { margin: 5px; padding: 5px; }
-        button { padding: 10px; }
+        body {
+            font-family: Arial;
+            background: #f5f5f5;
+            padding: 40px;
+        }
+        .container {
+            background: white;
+            padding: 25px;
+            width: 100%;
+            max-width: 600px;
+            margin: auto;
+            border-radius: 12px;
+            box-shadow: 0 3px 10px #bbb;
+        }
+
+        input, select, button {
+            width: 100%;
+            padding: 12px;
+            margin-top: 10px;
+        }
+
+        #qrImage img {
+            margin-top: 25px;
+        }
+
+        /* ✅ FINAL FIX — WRAPS LONG PAYLOAD */
+        #payloadBox {
+            margin-top: 20px;
+            background: #eee;
+            padding: 12px;
+            border-radius: 8px;
+            font-family: Consolas, monospace;
+            white-space: pre-wrap;      /* allow wrapping */
+            word-break: break-all;      /* force long text wrap */
+            overflow-wrap: break-word;  /* extra safety */
+        }
     </style>
 </head>
+
 <body>
+<div class="container">
+    <h2>EMV QR Generator</h2>
 
-<h2>EMV QR Generator</h2>
+    <label>Amount</label>
+    <input id="amount" value="25.50">
 
-<form action="/generateQR" method="post">
-    Amount: <input type="text" name="amount"><br>
-    Currency: <input type="text" name="currency"><br>
-    Device ID: <input type="text" name="deviceId"><br>
-    <button type="submit">Generate</button>
-</form>
+    <label>Currency Code</label>
+    <select id="currency">
+        <option value="840">USD (840)</option>
+        <option value="978">EUR (978)</option>
+        <option value="826">GBP (826)</option>
+        <option value="682">SAR (682)</option>
+        <option value="422">LBP (422)</option>
+    </select>
+
+    <label>Merchant Name</label>
+    <input id="merchantName" value="CCM TEST MERCHANT">
+
+    <label>Merchant City</label>
+    <input id="city" value="BEIRUT">
+
+    <label>Country Code</label>
+    <input id="country" value="LB">
+
+    <h3>MAI Fields (Tag 29)</h3>
+
+    <label>MAI 00 Merchant ID</label>
+    <input id="mai00" value="100000010000331">
+
+    <label>MAI 01 TRX DATE </label>
+    <input id="mai01" value="240712101550">
+
+    <label>MAI 05 Terminal ID</label>
+    <input id="mai05" placeholder="ex: 10000011" value="10000011">
+
+    <button onclick="generateQR()">Generate QR</button>
+    <div id="qrImage"></div>
+
+    <div id="payloadBox"></div>
+</div>
+
+<script>
+    function generateQR() {
+
+        const amount = document.getElementById("amount").value;
+        const currency = document.getElementById("currency").value;
+        const merchantName = document.getElementById("merchantName").value;
+        const city = document.getElementById("city").value;
+        const country = document.getElementById("country").value;
+
+        const mai00 = document.getElementById("mai00").value;
+        const mai01 = document.getElementById("mai01").value;
+        const mai05 = document.getElementById("mai05").value;
+
+        // Build API URL
+        const params =
+            `amount=${amount}&currency=${currency}&merchantName=${merchantName}&city=${city}&country=${country}&mai00=${mai00}&mai01=${mai01}&mai05=${mai05}`;
+
+        // Load payload string
+        fetch(`/qr/generate?${params}`)
+            .then(r => r.text())
+            .then(payload => {
+
+                // ❌ Removed <pre> → this FIXES wrapping
+                document.getElementById("payloadBox").innerHTML =
+                    "<b>QR Payload:</b><br>" + payload;
+
+                // Load QR image
+                document.getElementById("qrImage").innerHTML =
+                    `<img src="/qr/image?${params}" width="300" height="300">`;
+            });
+    }
+</script>
 
 </body>
 </html>
