Update title and content of index.html

--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>EMV QR Generator By CCM</title>
+    <title>CCM EMV QR Generator</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <style>
@@ -46,7 +46,7 @@
 
 <body>
 <div class="container">
-    <h2>EMV QR Generator</h2>
+    <h2>EMV QR Generator By Credit Card Management</h2>
 
     <label>Amount</label>
     <input id="amount" value="25.50">
@@ -118,3 +118,4 @@
 
 </body>
 </html>
+
