--- a/src/main/resources/static/index.html
+++ b/src/main/resources/static/index.html
@@ -46,8 +46,8 @@
 
 <body>
 <div class="container">
-    <h2>EMV QR Generator By Credit Card Management</h2>
-
+    <h2>Credit Card Management</h2>
+     <h1>EMV QR Generator<</h1>
     <label>Amount</label>
     <input id="amount" value="25.50">
 
@@ -118,4 +118,5 @@
 
 </body>
 </html>
+
 
