--- a/src/main/resources/static/qr.html
+++ b/src/main/resources/static/qr.html
@@ -128,6 +128,23 @@
                     `<img src="/qr/image?${params}" width="300" height="300">`;
             });
     }
+function generateTimestamp() {
+    const now = new Date();
+
+    const yyyy = now.getFullYear();
+    const MM = String(now.getMonth() + 1).padStart(2, "0");
+    const dd = String(now.getDate()).padStart(2, "0");
+    const ss = String(now.getSeconds()).padStart(2, "0");
+    const mm = String(now.getMinutes()).padStart(2, "0");
+    const nn = String(now.getMilliseconds()).padStart(3, "0").substring(0,2);
+
+    return `${yyyy}${MM}${dd}${ss}${mm}${nn}`;
+}
+
+window.onload = () => {
+    document.getElementById("mai01").value = generateTimestamp();
+};
+    
 </script>
 
 </body>
